Fixed overflow on social icons

--- a/site/assets/less/style.less
+++ b/site/assets/less/style.less
@@ -340,6 +340,11 @@ body {
     }
     .social-section {
         padding-bottom: 0px !important;
+
+        ul {
+            margin: 0px;
+            overflow: hidden;
+        }
     }
 }
 
